initial layout completed

--- a/index.html
+++ b/index.html
@@ -8,6 +8,47 @@
   <body>
     <div class="header">
       <h1>Broadway Design</h1>
+      <p><a href="#home">Home</a></p>
+      <p><a href="#process">Process</a></p>
+      <p><a href="#work">Work</a></p>
+      <p><a href="#team">Team</a></p>
+      <p><a href="#contack">Contact</a></p>
+    </div>
+    <div class="process">
+      <h2>Our Process</h2>
+      <img src="./resorces/icons/identify.svg">
+      <h3>Identify</h3>
+      <p>We focus on the most important details.</p>
+      <img src="./resorces/icons/understand.svg">
+      <h3>Understand</h3>
+      <p>We study our projects inside and out.</p>
+      <img src="./resorces/icons/execute.svg">
+      <h3>Execute</h3>
+      <p>We put everything we have into our work.</p>
+    </div>
+    <div class="work">
+      <h3>Designed In New Youk</h3>
+      <h3>Portfolio</h3>
+      <p>Coming Soon</p>
+    </div>
+    <div class="team">
+      <h3>Team</h3>
+      <p>We're Hiring</p>
+    </div>
+    <div class="contact">
+      <h3>Contact</h3>
+      <p>Phone: (555)-555-5555
+      <p>E-mail: test@example.com</p>
+      <p>Twitter: @test</p>
+    </div>
+    <div class="footer">
+      <p>&copy; Broadway 2017
+        <a href="#home">Home</a>
+        <a href="#about">About</a>
+        <a href="#work">Work</a>
+        <a href="#team">Team</a>
+        <a href="#contact">Contact</a>
+      </p>
     </div>
   </body>
 </html>
