--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <link rel="stylesheet" href="./resorces/css/style.css">
   </head>
   <body>
-    <div class="header">
+    <div class="home" id="home">
       <h1>Broadway Design</h1>
       <p><a href="#home">Home</a></p>
       <p><a href="#process">Process</a></p>
       <p><a href="#work">Work</a></p>
       <p><a href="#team">Team</a></p>
-      <p><a href="#contack">Contact</a></p>
+      <p><a href="#contact">Contact</a></p>
     </div>
-    <div class="process">
+    <div class="process" id="process">
       <h2>Our Process</h2>
       <img src="./resorces/icons/identify.svg">
       <h3>Identify</h3>
@@ -26,28 +26,30 @@
       <h3>Execute</h3>
       <p>We put everything we have into our work.</p>
     </div>
-    <div class="work">
-      <h3>Designed In New Youk</h3>
+    <div class="about" id="about">
+      <h3 class="">Designed In New Youk</h3>
+    </div>
+    <div class="work" id="work">
       <h3>Portfolio</h3>
       <p>Coming Soon</p>
     </div>
-    <div class="team">
+    <div class="team" id="team">
       <h3>Team</h3>
       <p>We're Hiring</p>
     </div>
-    <div class="contact">
+    <div class="contact" id="contact">
       <h3>Contact</h3>
       <p>Phone: (555)-555-5555
       <p>E-mail: test@example.com</p>
       <p>Twitter: @test</p>
     </div>
-    <div class="footer">
-      <p>&copy; Broadway 2017
-        <a href="#home">Home</a>
+    <div class="footer" id="footer">
+      <p><span id="copy">&copy; Broadway 2017</span>
+        <strong><a href="#home">Home</a>
         <a href="#about">About</a>
         <a href="#work">Work</a>
         <a href="#team">Team</a>
-        <a href="#contact">Contact</a>
+        <a href="#contact">Contact</a></strong>
       </p>
     </div>
   </body>
